@@ -8,7 +8,7 @@
     
       A trivial dialog for editing comments
     
-      (c) Vaclav Slavik, 2001
+      (c) Vaclav Slavik, 2001-2004
 
 */
 
@@ -31,6 +31,12 @@ class WXDLLEXPORT wxTextCtrl;
 class CommentDialog : public wxDialog
 {
     public:
+        /// Returns the given comment without the leading "# "
+        static wxString RemoveStartHash(const wxString& comment);
+
+        /// Returns the given comment with the leading "# " added
+        static wxString AddStartHash(const wxString& comment);
+
         /** Ctor. 
             \param parent  Parent frame, FindFrame will float on it
             \param comment Initial value of comment
