@@ -56,9 +56,9 @@
               </object>
               <style>wxTAB_TRAVERSAL</style>
             </object>
-            <label>Editor</label>
           </object>
           <object class="notebookpage">
+            <label>Editor</label>
             <object class="wxPanel">
               <object class="wxBoxSizer">
                 <orient>wxVERTICAL</orient>
@@ -90,6 +90,12 @@
                         <label>Always change focus to text input field</label>
                         <checked>1</checked>
                         <tooltip>Never let the list of strings take focus. If enabled, you must use Ctrl-arrows for keyboard navigation but you can also type text immediately, without having to press Tab to change focus.</tooltip>
+                      </object>
+                    </object>
+                    <object class="sizeritem">
+                      <object class="wxCheckBox" name="comment_window_editable">
+                        <label>Comment window is editable</label>
+                        <tooltip>If checked, the comment window will be editable. Only enable this for developers, translators shouldn't have to edit comments.</tooltip>
                       </object>
                     </object>
                   </object>
@@ -237,10 +243,10 @@
               </object>
               <style>wxTAB_TRAVERSAL</style>
             </object>
-            <label>Editor</label>
           </object>
           <object class="notebookpage">
-            <object class="wxPanel">
+            <label>Translation Memory</label>
+            <object class="wxPanel" name="tm_page">
               <object class="wxBoxSizer">
                 <orient>wxVERTICAL</orient>
                 <object class="sizeritem">
@@ -358,9 +364,9 @@
                 </object>
               </object>
             </object>
-            <label>Translation Memory</label>
           </object>
           <object class="notebookpage">
+            <label>Parsers</label>
             <object class="wxPanel">
               <object class="wxBoxSizer">
                 <orient>wxVERTICAL</orient>
@@ -413,7 +419,6 @@
               </object>
               <style>wxTAB_TRAVERSAL</style>
             </object>
-            <label>Parsers</label>
           </object>
         </object>
         <option>1</option>
