@@ -6,6 +6,9 @@ Version 1.2.5
 - fixed bug in displaying list entries in ANSI build introduced in 1.2.4
 - fixed opening of source files specified using absolute path
 - poEdit now preserves fuzzy status if set after partially editing an entry
+- many fixes to comment window (Olivier Sannier)
+- comment window is now (optionally) editable (Olivier Sannier)
+- fixed preferences dialog if translation memory is not used (Olivier Sannier)
 - added Mongolian translation (Mendbayar Bayar, Khurelbaatar Lkhagvasuren)
 
 
